--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<meta charset="utf-8">
 	<meta name="copyright" content="BASE" />
 	<title>{PageTitle}</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	{FaviconTag}
 	{JQueryTag}
 	{CanonicalTag}
@@ -50,6 +51,7 @@
 	<link rel="stylesheet" href="/css/shopTemplate/common.css?{UpdateTime}">
 	<link rel="stylesheet" href="{BASEURL}/css/colorbox.css">
 	<link rel="stylesheet" href="{BASEURL}/css/shopTemplate/shop_09.css?{UpdateTime}">
+	<link rel="stylesheet" href="https://rawgit.com/kikimetal/thebase/master/style.css">
 
 	{block:ItemPage}
 	{MetaItemInfoTag}
