--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 
 	<!-- my stylesheet --------------------->
-	<!-- <link rel="stylesheet" href="https://rawgit.com/kikimetal/thebase/master/style.css"> -->
+	<link rel="stylesheet" href="https://rawgit.com/kikimetal/thebase/master/style.css">
 	<style media="screen">
 		body{
 			background: #eee;
