--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
 
 	<!-- my stylesheet --------------------->
 	<link rel="stylesheet" href="https://rawgit.com/kikimetal/thebase/master/style.css">
-	<style media="screen">
+	<!-- /*<style media="screen">
 		body{
 			background: #eee;
 			color: #333;
 		}
-	</style>
+	</style>*/ -->
 	<!--------------------- my stylesheet -->
 
 
